Page MenuHome GnuPG

redefinition of typedef 'rfc822parse_t'
Closed, ResolvedPublic

Description

compile error with older gcc (e.g., 4.2.1):

In file included from wks-receive.c:30:
mime-parser.h:53: error: redefinition of typedef 'rfc822parse_t'
rfc822parse.h:23: error: previous declaration of 'rfc822parse_t' was here

See also T2824. The resolution could be the same as the one described in
issue 2824 - ignore error due to old compiler.

Details

Version
2.1.16

Event Timeline

headsup set Version to 2.1.16.
headsup added a subscriber: headsup.
werner raised the priority of this task from Low to Normal.Jan 6 2017, 5:16 PM
werner claimed this task.